--- a/src/components/introduction/introduction.scss
+++ b/src/components/introduction/introduction.scss
@@ -1,3 +1,78 @@
+@import '../../global.scss';
+
 .introduction{
-    background-color: lightpink;
+    background-color: $background;
+    display: flex;
+    
+    .left{
+        flex: 0.5;
+        overflow: hidden;
+
+        .imageContainer{
+            width: 130%;
+            height: 100vh;
+            background-color: $introPic;
+            border-top-right-radius: 40%;
+            border-bottom-right-radius: 40%;
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+            float: right;
+            transition: all 0.5s ease;
+
+            img{
+                height: 100%;
+            }
+
+            &.active{
+                border-top-right-radius: 0%;
+            }
+        }
+    }
+
+    .right{
+        flex: 0.5;
+        position: relative;
+
+        .wrapper{
+            width: 100%;
+            height: 100%;
+            padding-left: 50px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            h1{
+                font-size: 60px;
+                margin: 10px 0;
+            }
+            h2{
+                font-size: 35px;
+            }
+            h3{
+                font-size: 30px;
+
+                span{
+                    font-size: inherit;
+                    color: $mainColor;
+                }
+            }
+        }
+        a{
+            position: absolute;
+            bottom: 10px;
+            left: 40%;
+
+            img{
+                width: 30px;
+                animation: arrowBlink 2s infinite;
+            }
+
+            @keyframes arrowBlink {
+                100%{
+                    opacity: 0;
+                }
+            }
+        }
+    }
 }
