--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -4,7 +4,7 @@
     width: 100%;
     height: 70px;
     background-color:white;
-    color: $mainColor;
+    color: black;
     position: fixed;
     top: 0;
     z-index: 3;
@@ -22,7 +22,7 @@
 
             .logo{
                 font-size: 40px;
-                font-weight: 700;
+                font-weight: 400;
                 text-decoration: none;
                 color: inherit;
                 margin-right: 40px;
@@ -58,9 +58,9 @@
                 span{
                     width: 100%;
                     height: 3px;
-                    background-color: $mainColor;
+                    background-color: black;
                     transform-origin: left;
-                    transition: all 1s ease;
+                    transition: all 0.5s ease;
                 }
             }
         }
