--- a/src/components/introduction/introduction.scss
+++ b/src/components/introduction/introduction.scss
@@ -11,7 +11,7 @@
         .imageContainer{
             width: 130%;
             height: 100vh;
-            background-color: $introPic;
+            background-color: $secondaryColor;
             border-top-right-radius: 40%;
             border-bottom-right-radius: 40%;
             display: flex;
@@ -54,7 +54,20 @@
 
                 span{
                     font-size: inherit;
-                    color: $mainColor;
+                    color: $secondaryColor;
+                }
+
+                .ityped-cursor{
+                    animation: blink 1s infinite;
+                }
+
+                @keyframes blink {
+                    50%{
+                        opacity: 1;
+                    }
+                    100%{
+                        opacity: 0;
+                    }
                 }
             }
         }
